--- a/google_codelabs_1/pubspec.yaml
+++ b/google_codelabs_1/pubspec.yaml
@@ -1,5 +1,5 @@
 name: google_codelabs_1
-description: A new Flutter project.
+description: A new Flutter project made as i follow the google codelabs for introduction to flutter.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.4 <3.0.0'
+  sdk: '>=2.18.4 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -45,6 +45,9 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
+
+  english_words: ^4.0.0
+  provider: ^6.0.0
   flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
