feat:added basic code for container layout

--- a/layouts_in_flutter/pubspec.yaml
+++ b/layouts_in_flutter/pubspec.yaml
@@ -55,6 +55,7 @@ flutter:
     - images/pic1.jpg
     - images/pic2.jpg
     - images/pic3.jpg
+    - images/pavlova.jpg
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
