--- a/layouts_in_flutter/pubspec.yaml
+++ b/layouts_in_flutter/pubspec.yaml
@@ -85,6 +85,7 @@ flutter:
     - images/pic29.jpg
     - images/pic29.jpg
     - images/pic30.jpg
+    - images/lake.jpg
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
