--- a/adaptive_demos/pubspec.yaml
+++ b/adaptive_demos/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.2
   universal_platform: ^1.0.0+1
+  bitsdojo_window: ^0.1.5
   
 dev_dependencies:
   flutter_test:
