--- a/understanding_constraints/android/local.properties
+++ b/understanding_constraints/android/local.properties
@@ -1,2 +1,5 @@
 sdk.dir=/Users/ibukunoluwaakintobi/Library/Android/sdk
 flutter.sdk=/Users/ibukunoluwaakintobi/flutter
+flutter.buildMode=debug
+flutter.versionName=1.0.0
+flutter.versionCode=1
